--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                         <li>javascript</li>
                         <li>jquery</li>
                         <li>bootstrap</li>
+                        <li>vue.js</li>
                     </ul>
                 </div>
             </li>
