--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <ul class="social">
                 <li class="live"><a href=""  title="网络电视直播"><i>
                 </i><span>电视直播</span></a></li>
-                <li class="jsq"><a href="calculator.html" title="简易计算器">
+                <li class="jsq"><a href="###l" title="简易计算器">
                     <span>计算器</span></a></li>
             </ul>
         </div>
